# local_hub

./: .env.example  .gitignore  README.md  package-lock.json  package.json  requirements.txt  setup.ps1  setup.sh
AI/: pyproject.toml
AI/app/chatbot/: __init__.py  cli.py  config.py  prompts.py  router.py  schemas.py
AI/app/chatbot/graph/: builder.py  nodes.py  routing.py  state.py
AI/app/chatbot/llm/: client.py  prompts.py
AI/app/chatbot/services/: answer_formatter.py  data_loader.py  generate_sql.py  local_search.py
backend/: .gitignore  requirements.txt
backend/AI/: __init__.py
backend/AI/app/: main.py
backend/app/: __init__.py  database.py  main.py  models.py  schemas.py  seed.py  tour_loader.py  tour_loader_food.py
backend/app/api/: deps.py
backend/app/chatbot/: prompts.py
backend/app/crud/: map.py  places.py  posts.py  restaurants.py  travel_spots.py  weather.py
backend/app/db/: base.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: post_translation.py  seed.py  (+3 more)
backend/data/: SCHEMA_en.md  서울_관광지_en.json  서울_레포츠_en.json  서울_맛집.json  서울_맛집_en.json  서울_숙박_en.json  서울_여행코스_en.json  서울_축제공연행사_en.json
data/: SOURCE_en.md  tour_item_translations.json  서울_문화시설_en.json  서울_쇼핑_en.json
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.js  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
scripts/: backfill_posts_en.py  generate_english_data.py
src/stores/: portalStore.ts  uiStore.ts
src/views/: CommunityView.vue
(+42 files in other folders)
