[tool.poetry]
name = "local-hub-backend"
version = "0.1.0"
description = "FastAPI backend for Local Hub chatbot"
authors = ["Local Hub Team"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.0"
uvicorn = { extras = ["standard"], version = "^0.35.0" }
pydantic-settings = "^2.10.0"
langgraph = "^0.5.0"
langchain = "^0.3.0"
langchain-openai = "^0.3.0"
python-dotenv = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
ruff = "^0.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
