[tool.poetry]
name = "local-hub-backend"
version = "0.1.0"
description = "FastAPI backend for Local Hub chatbot"
authors = ["Local Hub Team"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.116.0"
uvicorn = { extras = ["standard"], version = "0.35.0" }
pydantic = "2.8.0"
pydantic-settings = "2.14.2"
sqlalchemy = "2.0.22"
langgraph = "1.2.9"
langchain = "1.3.13"
langchain-openai = "1.3.5"
python-dotenv = "1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "9.1.1"
pytest-asyncio = "1.4.0"
ruff = "0.15.21"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
